--- a/env-secret.yaml
+++ b/env-secret.yaml
@@ -3,6 +3,6 @@ kind: Secret
 metadata:
   name: env-secret
 data:
-  POSTGRES_USERNAME: test==
-  POSTGRES_PASSWORD: test==
-  JWT_SECRET: dGhpcyBpcyBhIHNlY3JldAo=
+  POSTGRES_USERNAME:
+  POSTGRES_PASSWORD:
+  JWT_SECRET: dGhpcyBpcyBhIHNlY3JldA==
