--- a/reverseproxy-deployment.yaml
+++ b/reverseproxy-deployment.yaml
@@ -20,15 +20,21 @@ spec:
           image: docker.io/kokose/udagram-reverseproxy:latest
           imagePullPolicy: Always
           ports:
-            - containerPort: 80
+            - containerPort: 8080
 
           resources:
             requests:
-              memory: "64Mi"
-              cpu: "250m"
+              memory: "128Mi"
+              cpu: "1024m"
             limits:
-              memory: "1024Mi"
-              cpu: "250m"
+              memory: "2048Mi"
+              cpu: "2048m"
+
+          envFrom:
+            - configMapRef:
+                name: env-configmap
+            - secretRef:
+                name: env-secret
 
           volumeMounts:
             - mountPath: "/root/.aws/"
