--- a/backend-user-deployment.yaml
+++ b/backend-user-deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: udagram-backend-user
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: udagram-backend-user
@@ -19,6 +19,8 @@ spec:
         - name: udagram-api-user
           image: docker.io/kokose/udagram-api-user:v1
           imagePullPolicy: Always
+          ports:
+            - containerPort: 80
 
           resources:
             requests:
